[gd_scene load_steps=4 format=3 uid="uid://bq4x8m2p1v5gn"]

[ext_resource type="Texture2D" uid="uid://b4bqicyso63m2" path="res://Assets/Sprites/menu.png" id="1_lobby_bg"]
[ext_resource type="Theme" uid="uid://dyswh45trxwxj" path="res://Assets/Themes/inkblut_classic.tres" id="2_lobby_theme"]
[ext_resource type="Script" path="res://Scenes/UI/lobby.gd" id="3_lobby_script"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_lobby_script")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -16.0
offset_top = -16.0
offset_right = 1240.0
offset_bottom = 688.0
color = Color(0.176471, 0.0627451, 0.152941, 1)

[node name="MenuTexture" type="TextureRect" parent="."]
modulate = Color(0.172549, 0, 0.215686, 1)
layout_mode = 0
offset_left = -16.0
offset_top = -16.0
offset_right = 1240.0
offset_bottom = 688.0
texture = ExtResource("1_lobby_bg")
expand_mode = 1

[node name="LobbyLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 432.0
offset_top = 48.0
offset_right = 792.0
offset_bottom = 168.0
theme = ExtResource("2_lobby_theme")
theme_override_font_sizes/font_size = 100
text = "LOBBY"

[node name="ServerInfoLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 168.0
offset_right = 1024.0
offset_bottom = 208.0
theme = ExtResource("2_lobby_theme")
theme_override_font_sizes/font_size = 24
text = "Server: Player's Lobby - Free-For-All - Map 1"
horizontal_alignment = 1

[node name="PlayerListContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 240.0
offset_right = 450.0
offset_bottom = 480.0
theme = ExtResource("2_lobby_theme")

[node name="PlayerListLabel" type="Label" parent="PlayerListContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Players:"

[node name="PlayerList" type="VBoxContainer" parent="PlayerListContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Player1" type="Label" parent="PlayerListContainer/PlayerList"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "1. Host (You)"

[node name="ChatContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 500.0
offset_top = 240.0
offset_right = 1150.0
offset_bottom = 480.0
theme = ExtResource("2_lobby_theme")

[node name="Panel" type="Panel" parent="ChatContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChatLabel" type="Label" parent="ChatContainer/Panel"]
layout_mode = 2
offset_left = 20.0
offset_top = 4.0
offset_right = 650.0
offset_bottom = 43.0
theme_override_font_sizes/font_size = 32
text = "Lobby Chat:"

[node name="ChatHistory" type="RichTextLabel" parent="ChatContainer/Panel"]
layout_mode = 2
offset_left = 20.0
offset_top = 47.0
offset_right = 650.0
offset_bottom = 199.0
size_flags_vertical = 3
bbcode_enabled = true
text = "[color=gray]Welcome to the lobby! Chat with other players while waiting...[/color]"
scroll_following = true

[node name="ChatInputContainer" type="HBoxContainer" parent="ChatContainer/Panel"]
layout_mode = 2
offset_left = 12.0
offset_top = 199.0
offset_right = 644.0
offset_bottom = 236.0
theme_override_constants/separation = 10

[node name="MessageInput" type="LineEdit" parent="ChatContainer/Panel/ChatInputContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type a message..."

[node name="SendButton" type="Button" parent="ChatContainer/Panel/ChatInputContainer"]
layout_mode = 2
text = "Send"

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 360.0
offset_top = 520.0
offset_right = 864.0
offset_bottom = 600.0
theme = ExtResource("2_lobby_theme")
theme_override_constants/separation = 40

[node name="StartGameButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "START GAME"

[node name="LeaveLobbyButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "LEAVE LOBBY"
